# TCP-Streamer

./: .clippy.toml  .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  CHANGELOG_v1.4.0.md  CHANGELOG_v1.5.4.md  CHANGELOG_v1.5.5.md  CHANGELOG_v1.5.6.md  CHANGELOG_v1.5.7.md  CHANGELOG_v1.5.8.md  CHANGELOG_v1.5.9.md  CHANGELOG_v1.6.0.md  CHANGELOG_v1.8.4.md  CONTRIBUTING.md  LINUX_GUIDE.md  README.md  RELEASE_NOTES_v1.9.0.md  eslint.config.js  lefthook.yml  logo_render.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js  vitest.config.ts
.agent/rules/: github-releases.md
.github/workflows/: build.yml  release.yml
docs/superpowers/plans/: 2026-06-05-fase1-parte-a-fundacion.md  2026-06-06-fase1-parte-b-adaptive-metrics.md  2026-06-06-fase1-parte-c-transport-fiabilidad.md  2026-06-06-fase2a-conectividad.md  2026-06-06-fase2b-i-sink-udp.md  2026-06-06-fase2b-ii-cifrado.md  2026-06-06-fase2b-iii-mdns-drift.md  2026-06-06-fase3-rediseno-ui.md  (+1 more)
src/: App.vue  debug-store.js  index.html  main.js  main.ts  style.css  styles.css
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: post-install.sh
src-tauri/src/: audio.rs  encoder.rs  health.rs  lib.rs  main.rs  protocol.rs
src-tauri/src/audio/: chunked.rs  commands.rs  constants.rs  error.rs  manager.rs  metrics.rs  mod.rs  stats.rs  stream.rs  wav_helper.rs
src-tauri/src/audio/engine/: buffer.rs  capture.rs  convert.rs  decoder.rs  device.rs  encoder.rs  latency.rs  mod.rs  pacing.rs  playback.rs  sink.rs
src-tauri/src/audio/transport/: allowlist.rs  discovery.rs  dscp.rs  mod.rs  resolve.rs  tcp_client.rs  tcp_server.rs
src-tauri/src/audio/transport/udp/: crypto.rs  drift.rs  jitter.rs  mod.rs  packet.rs  sink.rs  source.rs  tests_loopback.rs
src/components/: AppFooter.vue  AppHeader.vue  AppShell.vue  Header.vue  LinuxTitlebar.vue  Sidebar.vue  StatsBar.vue  StreamButton.vue  TabNav.vue  ToastNotification.vue  icons.ts
src/components/ui/: Badge.vue  (+18 more)
src/composables/: useTauri.js  useTauri.ts
src/i18n/: en.json  es.json  index.ts
src/stores/: settings.js  settings.ts  stream.js  stream.ts  ui.ts
src/types/: events.ts
(+23 files in other folders)
