[package]
name = "tcp-streamer"
version = "0.4.0"
description = "A lightweight TCP audio streamer"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tcp_streamer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
tauri-plugin-autostart = "2"
tauri-plugin-store = "2"
chrono = { version = "0.4", features = ["serde"] }

# Phase 1: Async TCP + Ring Buffer
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "io-util", "net"] }
ringbuf = "0.4"

# Phase 2: Compression
flac-bound = "0.3"
opus = "0.3"
