[package]
name = "tcp-streamer"
version = "1.5.5"
description = "A lightweight TCP audio streamer"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tcp_streamer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
tauri-plugin-autostart = "2"
tauri-plugin-store = "2"
chrono = { version = "0.4", features = ["serde"] }
ringbuf = "0.3"
socket2 = "0.5"
tauri-plugin-log = "2.7.1"
log = "0.4.28"
thread-priority = "3.0.0"
hostname = "0.4"
mac_address = "1.1"



